k8s/manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: janik-kustomize-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: janik-instance
    app.kubernetes.io/name: janik-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-sample-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app.kubernetes.io/name: janik-app
    matchLabels:
      app.kubernetes.io/instance: janik-instance
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: janik-instance
        app.kubernetes.io/name: janik-app
    spec:
      containers:
      - env:
        - name: INGRESS_HOST
        - name: PROTOCOLS
        - name: LOG_LEVEL
          value: debug
        image: quay.io/janikbuecher/buildah-assignment:48fcf634fd5c86d094ae039736c24f03f2f04d89
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: janik-kustomize-app
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: janik-kustomize-app
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: janik-kustomize-app
    weight: 100
  wildcardPolicy: None
